chore: update .env setup instructions for token-gate server

--- a/.env.txt
+++ b/.env.txt
@@ -1,13 +1,11 @@
-NODE_URL=wss://testnet.vara.network
-VOUCHER_ACCOUNT_SEED_HEX=0x..........
-PORT=3000
-JWT_SECRET=secreto   
-NODE_ENV=development                   
 
 # ===========================
 # VARA / GEAR CONNECTION
 # ===========================
-VARA_WS=wss://testnet.vara.network 
+VARA_WS=wss://testnet.vara.network
+PORT=3000
+JWT_SECRET=secret   
+NODE_ENV=development    
 
 # ===========================
 # TOKEN GATING CONFIG
